tests/negative/gold/continue_label_test.gold
tests/negative/continue_label_test.toit:9:14: error: Unresolved label 'bar'
    continue.bar
             ^~~
tests/negative/continue_label_test.toit:13:16: error: Can't return out of lambda
      continue.foo
               ^~~
Compilation failed.
